# JMahjong

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: layout.c.98F88B0B3F4DFB9E.idx  layout.c.BD6F2958F63BD656.idx  layout.c.EB1916F423CD0012.idx  layout.h.594AE67330904441.idx  layout.h.C0601C0BC50D8488.idx  layout.h.D56FDCE4EDD5C9A0.idx  list.c.D5736F82A40CFEF6.idx  list.h.BF6BAF7D7D7FC0CB.idx  mahjong.c.0299143AE9432CC4.idx  mahjong.c.BD5D6C1C436D45ED.idx  mahjong.h.418895D3D285F303.idx  mahjong.h.B812F5934A43C8EC.idx  main.c.0BE5FB2BCD2E3E66.idx  main.c.5F8DBBC08803FC7F.idx  main.c.671AB67C6821CDAD.idx
include/: layout.h  mahjong.h
layouts/: spider.txt  text_to_binary.py
src/: layout.c  mahjong.c  main.c
